eliminacion de todos los warnings de la IU